<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">

    <ImageView android:id="@+id/image_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_app_logo"
            android:background="@color/color_32485e"
            android:padding="@dimen/default_padding"
            android:scaleType="fitStart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView android:id="@+id/text_privacy_title"
              android:layout_width="match_parent"
              android:layout_height="50dp"
              android:text="@string/title_privacy_info"
              android:textSize="@dimen/content_font_size"
              android:gravity="center"
              android:textStyle="bold"
              app:layout_constraintTop_toBottomOf="@+id/image_logo"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"/>

    <View  android:id="@+id/view_line"
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:background="@color/color_808080"
           app:layout_constraintTop_toBottomOf="@+id/text_privacy_title"/>

    <TextView android:id="@+id/text_privacy_info"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="@dimen/content_font_small_size"
              android:layout_marginTop="30dp"
              android:layout_marginLeft="10dp"
              app:layout_constraintTop_toBottomOf="@+id/view_line"/>

    <Button android:id="@+id/button_disagree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_disagree"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/button_font_size"
            android:background="@color/color_32485e"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_agree"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button android:id="@+id/button_agree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_agree"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/button_font_size"
            android:background="@color/color_32485e"
            app:layout_constraintStart_toEndOf="@+id/button_disagree"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>