<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:orientation="vertical"
                                                   android:background="@color/color_32485e">

        <!--<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="0dp"-->
                                                       <!--android:layout_height="0dp"-->
                                                       <!--app:layout_constraintTop_toTopOf="parent"-->
                                                       <!--app:layout_constraintStart_toStartOf="parent"-->
                                                       <!--app:layout_constraintEnd_toEndOf="parent"-->
                                                       <!--app:layout_constraintBottom_toBottomOf="parent"-->
                                                       <!--app:layout_constraintDimensionRatio="H, 16:16">-->
        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="@dimen/default_margin"
                   android:layout_marginLeft="@dimen/default_margin"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintStart_toStartOf="parent"/>

        <ImageView android:id="@+id/image_logo"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                        android:src="@drawable/ic_app_logo"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintVertical_bias="0.1"/>

        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/layout_login"
                                                           android:layout_width="match_parent"
                                                           android:layout_height="0dp"
                                                           android:layout_marginLeft="50dp"
                                                           android:layout_marginRight="50dp"
                                                           android:orientation="vertical"
                                                           android:focusable="true"
                                                           android:focusableInTouchMode="true"
                                                           app:layout_constraintTop_toBottomOf="@+id/image_logo"
                                                           app:layout_constraintBottom_toBottomOf="parent"
                                                           app:layout_constraintDimensionRatio="H, 9:11"
                                                           app:layout_constraintVertical_bias="0.3">

                <androidx.appcompat.widget.SwitchCompat android:id="@+id/switch_use_bio"
                                                        style="@style/CustomSwitch"
                                                        android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
                                                        android:text="@string/use_bio_login"
                                                        android:textColor="@color/color_ffffff"
                                                        android:textSize="@dimen/content_font_size"
                                                        android:visibility="invisible"
                                                        app:switchPadding="@dimen/switch_padding"
                                                        app:layout_constraintTop_toTopOf="parent"
                                                        app:layout_constraintStart_toStartOf="parent"
                                                        app:layout_constraintEnd_toStartOf="@+id/text_guide"
                                                        app:layout_constraintBottom_toBottomOf="parent"
                                                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                                                        app:layout_constraintVertical_bias="0"/>


                <TextView android:id="@+id/text_guide"
                          android:layout_width="30dp"
                          android:layout_height="30dp"
                          android:text="\?"
                          android:textColor="@color/color_ffffff"
                          android:textSize="@dimen/button_font_size"
                          android:onClick="onClick"
                          android:background="@drawable/white_border"
                          android:gravity="center"
                          app:layout_constraintBaseline_toBaselineOf="@+id/switch_use_bio"
                          app:layout_constraintStart_toEndOf="@+id/switch_use_bio"
                          app:layout_constraintEnd_toEndOf="parent"/>

                <EditText android:id="@+id/edit_id"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/input_id_hint"
                          android:textSize="@dimen/edit_text_font_size"
                          android:privateImeOptions="defaultInputmode=english"
                          android:background="@color/color_ffffff"
                          android:padding="@dimen/default_edit_text_padding"
                          app:layout_constraintTop_toBottomOf="@+id/switch_use_bio"
                          app:layout_constraintBottom_toTopOf="@+id/edit_password"
                          app:layout_constraintStart_toStartOf="parent" />
                <EditText android:id="@+id/edit_password"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/input_pw_hint"
                          android:textSize="@dimen/edit_text_font_size"
                          android:privateImeOptions="defaultInputmode=english"
                          android:inputType="textPassword"
                          android:imeOptions="actionGo"
                          android:background="@color/color_ffffff"
                          android:padding="@dimen/default_edit_text_padding"
                          app:layout_constraintTop_toBottomOf="@+id/edit_id"
                          app:layout_constraintBottom_toTopOf="@+id/button_login"/>
                <Button android:id="@+id/button_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/action_login"
                        android:textColor="@color/color_ffffff"
                        android:textSize="@dimen/button_font_size"
                        android:background="@drawable/white_border"
                        android:onClick="onClick"
                        app:layout_constraintTop_toBottomOf="@+id/edit_password"
                        app:layout_constraintBottom_toTopOf="@+id/check_save_id"/>

                <CheckBox android:id="@+id/check_save_id"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:buttonTint="@color/color_ffffff"
                          android:text="@string/save_id"
                          android:textColor="@color/color_ffffff"
                          android:textSize="@dimen/content_font_size"
                          app:layout_constraintTop_toBottomOf="@+id/button_login"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintEnd_toStartOf="@+id/check_auto_login"
                          app:layout_constraintBottom_toTopOf="@+id/view_line"
                          app:layout_constraintHorizontal_chainStyle="spread_inside"/>
                <CheckBox android:id="@+id/check_auto_login"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:buttonTint="@color/color_ffffff"
                          android:text="@string/auto_login"
                          android:textColor="@color/color_ffffff"
                          android:textSize="@dimen/content_font_size"
                          app:layout_constraintBaseline_toBaselineOf="@+id/check_save_id"
                          app:layout_constraintStart_toEndOf="@+id/check_save_id"
                          app:layout_constraintEnd_toEndOf="parent"/>

                <View  android:id="@+id/view_line"
                       android:layout_width="match_parent"
                       android:layout_height="@dimen/line_size"
                       android:background="@color/color_808080"

                       app:layout_constraintTop_toBottomOf="@+id/check_save_id"
                       app:layout_constraintBottom_toTopOf="@+id/text_find_id"/>

                <ImageView android:id="@+id/image_prompt_ic"
                           android:layout_width="140dp"
                           android:layout_height="140dp"
                           android:src="@drawable/ic_prompt_fingerprint"
                           android:onClick="onClick"
                           android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                           app:layout_constraintTop_toBottomOf="@+id/switch_use_bio"
                           app:layout_constraintStart_toStartOf="parent"
                           app:layout_constraintEnd_toEndOf="parent"
                           app:layout_constraintBottom_toTopOf="@+id/text_prompt"/>
                <TextView android:id="@+id/text_prompt"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="center"
                          android:text="@string/title_prompt_login"
                          android:textColor="@color/color_ffff00"
                          android:textSize="@dimen/content_font_big_size"
                          android:layout_marginTop="@dimen/default_margin"
                    android:onClick="onClick"
                          app:layout_constraintTop_toBottomOf="@+id/image_prompt_ic"
                          app:layout_constraintBottom_toTopOf="@+id/text_find_id"/>

                <androidx.constraintlayout.widget.Group android:id="@+id/group_login"
                                                  android:layout_width="wrap_content"
                                                  android:layout_height="wrap_content"
                                                  android:visibility="visible"
                                                  app:constraint_referenced_ids="edit_id,edit_password,button_login,check_save_id,check_auto_login,view_line"/>

                <androidx.constraintlayout.widget.Group android:id="@+id/group_prompt_login"
                                                  android:layout_width="wrap_content"
                                                  android:layout_height="wrap_content"
                                                  android:visibility="gone"
                                                  app:constraint_referenced_ids="image_prompt_ic,text_prompt"/>

                <TextView android:id="@+id/text_find_id"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/find_id"
                          android:textColor="@color/color_ffffff"
                          android:textSize="@dimen/content_font_size"
                          android:onClick="onClick"
                          android:layout_marginTop="@dimen/default_margin"
                          app:layout_constraintTop_toTopOf="parent"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintEnd_toStartOf="@+id/text_find_pw"
                          app:layout_constraintBottom_toBottomOf="parent"
                          app:layout_constraintHorizontal_chainStyle="spread_inside"
                          app:layout_constraintVertical_bias="0.9"/>
                <TextView android:id="@+id/text_find_pw"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/find_pw"
                          android:textColor="@color/color_ffffff"
                          android:textSize="@dimen/content_font_size"
                          android:onClick="onClick"
                          app:layout_constraintStart_toEndOf="@+id/text_find_id"
                          app:layout_constraintEnd_toStartOf="@+id/text_contact_us"
                          app:layout_constraintBaseline_toBaselineOf="@+id/text_find_id"/>
                <TextView android:id="@+id/text_contact_us"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/contact_us"
                          android:textColor="@color/color_ffffff"
                          android:textSize="@dimen/content_font_size"
                          android:onClick="onClick"
                          app:layout_constraintStart_toEndOf="@+id/text_find_pw"
                          app:layout_constraintEnd_toEndOf="parent"
                          app:layout_constraintBaseline_toBaselineOf="@+id/text_find_id"/>



        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView android:id="@+id/text_copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:gravity="center"
            android:text="@string/app_copyright"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/content_font_size"
            app:layout_constraintTop_toBottomOf="@+id/layout_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0"/>

        <include android:id="@+id/layout_prompt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/layout_prompt_login"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/image_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.2"/>

        <FrameLayout android:id="@+id/layout_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>